<resources>
    <string name="app_name">BrushStroke</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="facebook_app_id">444157769284253</string>
    <string name="fb_login_protocol_scheme">fb444157769284253</string>

    <string name="action_settings">Logout</string>
    <string name="host_url">https://svatsa159.000webhostapp.com/</string>

    <string name="name_hint">First &amp; last name</string>
    <string name="mobile_hint">Mobile Number</string>
    <string name="street_hint">Street</string>
    <string name="city_hint">City</string>
    <string name="state_hint">State</string>
    <string name="pincode_hint">Pin</string>
    <string name="rbCustomer">User</string>
    <string name="rbBeautician">Beautician</string>
    <string name="button_text_register">Register</string>
    <string name="password_hint">password</string>
    <string name="adhaar_hint">Adhaar number</string>
    <string name="button_text_location">Get location from address</string>
    <string name="bn_action_logout">Logout</string>


    //errors
    <string name="error_connection">please check your connection</string>
    <string name="error_username">please fill username</string>
    <string name="error_email">invalid email id</string>
    <string name="error_password">min 6 characters required in password</string>
    <string name="error_mobile">please fill 10 digit mobile number</string>
    <string name="error_street">please fill street</string>
    <string name="error_city">please fill city</string>
    <string name="error_state">please fill state</string>
    <string name="error_pincode">please fill pincode</string>
    <string name="error_adhaar">please fill adhaar number</string>
    <string name="error_payment_id">please fill payment id</string>
    <string name="error_gps">could not get location from GPS</string>
    <string name="title_activity_bn_main">BnMainActivity</string>
    <string name="basic_info">Basic Info</string>
    <string name="edit_details">Edit Details</string>
    <string name="contact_info">Contact Info</string>
    <string name="address_textview">Address</string>
    <string name="interests">Interests</string>
    <string name="hobbies_textview">Hobbies</string>
    <string name="name">Name</string>
    <string name="more">Describe Who You Are</string>
    <string name="email">Email Id</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="code">Enter the code recieved</string>
</resources>
