<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pilani.brushstroke.Nav_Activities.Profile">

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/default_profile_pic"
        android:layout_centerHorizontal="true"
        />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_img"
        android:id="@+id/basic_info"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_info"
            android:textColor="@color/colorAccent"
            />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_details"
            android:id="@+id/basic_info_edit"
            android:layout_gravity="end"
            android:textColor="@color/colorPrimaryDark"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_box"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/name"
                android:text="@string/name"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:ems="8"
                android:textSize="15dp"
                android:textAlignment="textEnd"
                android:layout_alignParentEnd="true"
                android:id="@+id/name"
                />
        </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/basic_info"
        android:id="@+id/contact_info"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_info"
            android:textColor="@color/colorAccent"
            />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact_info_edit"
            android:text="@string/edit_details"
            android:layout_gravity="end"
            android:textColor="@color/colorPrimaryDark"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mobile_box"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/mobile"
                    android:text="@string/mobile_hint"
                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_hint"
                    android:ems="8"
                    android:inputType="number"
                    android:textSize="15dp"
                    android:textAlignment="textEnd"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/mobile"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:id="@+id/address_box"
                android:layout_below="@+id/mobile_box"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/address"
                    android:text="@string/address_textview"
                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_textview"
                    android:layout_alignParentEnd="true"
                    android:ems="8"
                    android:textSize="15dp"
                    android:textAlignment="textEnd"
                    android:id="@+id/address"
                    android:inputType="textPostalAddress"
                    />
            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_info"
        android:id="@+id/Interests"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interests"
            android:textColor="@color/colorAccent"
            />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_details"
            android:id="@+id/interests_info_edit"
            android:layout_gravity="end"
            android:textColor="@color/colorPrimaryDark"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hobbies_box"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/hobbies"
                    android:text="@string/hobbies_textview"
                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hobbies_textview"
                    android:layout_alignParentEnd="true"
                    android:ems="8"
                    android:textSize="15dp"
                    android:textAlignment="textEnd"
                    android:id="@+id/hobbies"
                    />
            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/more_layout"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/Interests"
        android:background="@color/background_nav"
        android:textColorHint="@color/colorAccent"
        style="@style/AppTheme.Text.TextInputLayout"
       >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/more"
            style="@style/AppTheme.EditText2"
            android:hint="@string/more"
            android:textColorHint="@color/colorAccent"
            android:textSize="10dp"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>
</RelativeLayout>
